--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -9,4 +9,4 @@ crate-type = ["cdylib"]
 
 [dependencies]
 strobealign = { path = ".." }
-pyo3 = { version = "0.21.0-beta.0", features = ["extension-module"] }
+pyo3 = { version = "0.27.2", features = ["extension-module"] }
